# python-insight-images

./: .gitignore  .travis.yml  README.rst  setup.cfg  tox.ini
insight/: api.py  cli.py  image.py
tests/: requirements.txt  test_api.py  test_cli.py
