[metadata]
name = insight-images
author = Benoit Seignovert
author-email = benoit.a.seignovert@jpl.nasa.gov
summary = Python package to download and sync InSight raw media images
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/seignovert/python-insight-images
license = MIT
keywords = nasa, insight, image, api
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    insight

[wheel]
universal = 1

[coverage:report]
exclude_lines =
    def __repr__

[entry_points]
console_scripts =
    insight-sync = insight.cli:sync